--- a/public/css/homepage/sec2.css
+++ b/public/css/homepage/sec2.css
@@ -16,7 +16,7 @@
 .row-test-1 {
     display: flex;
     flex-wrap: wrap;
-    /*justify-content: center;*/
+    justify-content: center;
     /*align-items: center;*/
 }
 
