--- a/public/css/header.css
+++ b/public/css/header.css
@@ -13,7 +13,7 @@
 }
 .header-mobile {
     height: 9vh;
-    background-color: white;
+    background-image: url("/images/header/川から見上Background Standee 1(DaikoHL_VIEW1_100419) (1) 3.png");
     position: sticky !important;
     top: 0;
     z-index: 1020;
@@ -138,6 +138,10 @@ ul.iconmb {
     margin-top: -11%;
 }
 
+.fix-pos {
+    top: -8px
+}
+
 .menuleft {
     display: flex;
     flex-wrap: wrap;
@@ -181,6 +185,11 @@ ul.iconmb {
 
 .menuright li {
     list-style-type: none;
+}
+
+.text-menu-mb {
+    text-decoration: none;
+    color: white;
 }
 
 /*@media screen and (max-width: 1400px) {*/
