--- a/public/css/homepage/sec2.css
+++ b/public/css/homepage/sec2.css
@@ -1,6 +1,6 @@
 .sec2-HP-pc {
     background-image: url("/images/homepage/sec2/Group 101.png");
-    background-size: contain;
+    background-size: 100% 105%;
     padding-bottom: 5%;
     padding-top: 3%;
     background-position: center -7px;
