--- a/public/css/introduce/sec1.css
+++ b/public/css/introduce/sec1.css
@@ -4,7 +4,7 @@
     height: 83vh;
     background-size: cover;
     background-repeat: no-repeat;
-    margin-top: 17vh;
+    /*margin-top: 17vh;*/
 }
 
 .
