--- a/public/css/location/sec3.css
+++ b/public/css/location/sec3.css
@@ -3,7 +3,8 @@
     justify-content: center;
     text-align: center;
     background-image: url("/images/location/sec3/nền-17 3 (1).png");
-    padding-top: 3%;
+    background-size: 100% 105%;
+    padding: 3% 0;
 }
 
 .sec3-location-mb {
@@ -12,6 +13,18 @@
     text-align: center;
     background-image: url("/images/location/sec3/nền-17 3 (1).png");
     padding-top: 3%;
+}
+
+.header2-sec3-location-pc {
+    text-transform: uppercase;
+    font-size: 40px;
+    color: #141C46;
+}
+
+.header1-sec3-location-pc {
+    font-size: 40px;
+    color: #BA322E;
+    margin-top: -1.5%;
 }
 
 .header1-sec3-location-mb {
