--- a/public/css/location/sec2.css
+++ b/public/css/location/sec2.css
@@ -23,7 +23,7 @@
 
 .header2-sec2-location-pc {
     font-size: 40px;
-    color: white;
+    color: #D8AB67;
 }
 
 .text-sec2-location-pc {
@@ -43,7 +43,7 @@
 
 .header2-sec2-location-mb {
     font-size: 25px;
-    color: white;
+    color: #D8AB67;
 }
 
 .text-sec2-location-mb {
