--- a/public/css/introduce/sec3.css
+++ b/public/css/introduce/sec3.css
@@ -8,7 +8,7 @@
 
 .text-sec3-intro-pc {
     text-align: justify;
-
+    color: #133351;
 }
 
 .all-header-sec3-intro-pc {
@@ -50,7 +50,7 @@
     width: 90vw;
     margin-left: 5%;
     text-align: justify;
-    color: black;
+    color: #133351;
 }
 
 .header-first-line-intro-mb {
