--- a/public/css/introduce/sec4.css
+++ b/public/css/introduce/sec4.css
@@ -21,7 +21,7 @@
 .header21-sec4-intro-pc {
     text-transform: uppercase;
     font-size: 50px;
-    color: #141C46;
+    color: #43496B;
 }
 
 .header3-sec4-intro-pc {
@@ -33,6 +33,8 @@
 .text-sec4-intro-pc {
     justify-content: center;
     text-align: justify;
+    color: #43496B;
+    font-size: 15px;
 }
 
 .sec4-intro-mb {
@@ -63,7 +65,7 @@
     /*width: 90vw;*/
     text-transform: uppercase;
     font-size: 25px;
-    color: #133351;
+    color: #43496B;
 }
 
 .header3-sec4-intro-mb {
