--- a/public/css/introduce/sec3.css
+++ b/public/css/introduce/sec3.css
@@ -19,7 +19,8 @@
     text-transform: uppercase;
     text-align: right;
     justify-content: right;
-    font-size: 25px;
+    font-size: 21px;
+    color: #133351;
 }
 
 .header2-sec3-intro-pc {
