--- a/public/css/product-v/sec2.css
+++ b/public/css/product-v/sec2.css
@@ -23,8 +23,9 @@
 
 .header-sec2-product-pc {
     text-transform: uppercase;
-    font-size: 25px;
+    font-size: 21px;
     padding-top: 5%;
+    color: #133351;
 }
 
 .container-sec2-product-pc {
