--- a/public/css/location/sec2.css
+++ b/public/css/location/sec2.css
@@ -17,12 +17,12 @@
 }
 
 .header1-sec2-location-pc {
-    font-size: 25px;
+    font-size: 1.09vw;
     color: white;
 }
 
 .header2-sec2-location-pc {
-    font-size: 40px;
+    font-size: 2.66vw;
     color: #D8AB67;
 }
 
