--- a/public/css/location/sec3.css
+++ b/public/css/location/sec3.css
@@ -17,12 +17,12 @@
 
 .header2-sec3-location-pc {
     text-transform: uppercase;
-    font-size: 40px;
+    font-size: 2.66vw;
     color: #141C46;
 }
 
 .header1-sec3-location-pc {
-    font-size: 40px;
+    font-size: 2.66vw;
     color: #BA322E;
     margin-top: -1.5%;
 }
