--- a/public/css/product-v/sec2.css
+++ b/public/css/product-v/sec2.css
@@ -13,12 +13,12 @@
 .mainheader1-sec2-product-pc {
     padding-left: 5%;
     text-transform: uppercase;
-    font-size: 40px;
+    font-size: 2.66vw;
 }
 
 .mainheader2-sec2-product-pc {
     padding-left: 5%;
-    font-size: 40px;
+    font-size: 2.66vw;
 }
 
 .header-sec2-product-pc {
