--- a/public/css/contact-v/sec2.css
+++ b/public/css/contact-v/sec2.css
@@ -21,19 +21,19 @@
 
 .header1-sec2-contact-pc {
     text-transform: uppercase;
-    font-size: 25px;
+    font-size: 1.1vw;
     color: #43496B;
 }
 
 .header2-sec2-contact-pc {
     text-transform: uppercase;
-    font-size: 40px;
+    font-size: 2.66vw;
     color: #141C46;
 }
 
 .header3-sec2-contact-pc {
     text-transform: uppercase;
-    font-size: 25px;
+    font-size: 1.1vw;
     color: #133351;
 }
 
