--- a/public/css/introduce/sec3.css
+++ b/public/css/introduce/sec3.css
@@ -19,12 +19,12 @@
     text-transform: uppercase;
     text-align: right;
     justify-content: right;
-    font-size: 21px;
+    font-size:  1.09vw;
     color: #133351;
 }
 
 .header2-sec3-intro-pc {
-    font-size: 40px;
+    font-size: 2.66vw;
     text-align: right;
     justify-content: right;
     color: #11293F;
@@ -33,7 +33,7 @@
 .header3-sec3-intro-pc {
     text-align: right;
     justify-content: right;
-    font-size: 40px;
+    font-size: 2.66vw;
     color: #BA322E;
     margin-top: -3%;
 }
