--- a/public/css/homepage/sec2.css
+++ b/public/css/homepage/sec2.css
@@ -3,7 +3,7 @@
     background-size: 100% 105%;
     padding-bottom: 5%;
     padding-top: 3%;
-    background-position: center -7px;
+    background-position: center -10px;
 }
 
 .row-test {
@@ -52,6 +52,7 @@
 
 .first-text-hp {
     margin-left: 15%;!important;
+    margin-bottom: 10%;
 }
 
 .double-border {
@@ -78,6 +79,7 @@
 }
 
 .btn-content2-sec2-hp {
+    margin-top: 10%;
     text-align: right;
 }
 
