--- a/public/css/location/sec2.css
+++ b/public/css/location/sec2.css
@@ -1,9 +1,9 @@
 .sec2-loction-pc {
     background-image: url("/images/location/sec2/Group 105 (2).png");
     background-size: 100% 105%;
-    background-position: center -10px;
+    background-position: center -11px;
     padding-top: 5%;
-    padding-bottom: 5%;
+    /*padding-bottom: 5%;*/
 }
 
 .sec2-loction-mb {
