fix-font-remove-shadow-effect

--- a/public/css/homepage/sec2.css
+++ b/public/css/homepage/sec2.css
@@ -32,6 +32,7 @@
     text-transform: uppercase;
     color: white;
     font-size: 20px;
+    letter-spacing: 0.35rem;;
 }
 
 .header-second-line-hp {
