--- a/public/css/location/sec2.css
+++ b/public/css/location/sec2.css
@@ -19,6 +19,7 @@
 .header1-sec2-location-pc {
     font-size: 1.09vw;
     color: white;
+    letter-spacing: 0.35rem;
 }
 
 .header2-sec2-location-pc {
