--- a/public/css/introduce/sec4.css
+++ b/public/css/introduce/sec4.css
@@ -11,6 +11,7 @@
 .header1-sec4-intro-pc {
     font-size: 1.09vw;
     color: #133351;
+    letter-spacing: 0.35rem;
 }
 
 .header2-sec4-intro-pc {
