--- a/public/css/tien-do/sec2.css
+++ b/public/css/tien-do/sec2.css
@@ -10,9 +10,9 @@
 }
 
 .header1-sec2-tien-do {
+   letter-spacing: 0.35rem;
     font-size: 25px;
 }
 
 .header2-sec2-tien-do {
-    font-size: 40px;
 }
