--- a/public/css/product-v/sec3.css
+++ b/public/css/product-v/sec3.css
@@ -24,7 +24,7 @@
 
 .header2-sec3-product-pc {
     text-transform: uppercase;
-    font-size: 40px;
+    font-size: 2.66vw;
     color: #D8AB67;
 }
 
