fix btn tìm hiêu thêm

--- a/public/css/homepage/sec2.css
+++ b/public/css/homepage/sec2.css
@@ -53,7 +53,7 @@
 .first-text-hp {
     margin-left: 15%;!important;
     margin-bottom: 10%;
-    letter-spacing: 0.045rem;
+    /*letter-spacing: 0.045rem;*/
 }
 
 .double-border {
