--- a/public/css/homepage/sec2.css
+++ b/public/css/homepage/sec2.css
@@ -21,11 +21,13 @@
 }
 
 .img-sec2-hp-1 {
-    transform: translateX(14%);
+    padding-left: 2%;
+    padding-right: 4%;
 }
 
 .img-sec2-hp-2 {
-    transform: translateX(-14%);
+    padding-right: 2%;
+    padding-left: 4%;
 }
 
 .header-first-line-hp {
@@ -36,8 +38,8 @@
 
 .header-second-line-hp {
     color: #D8AB67;
-    font-size: 40px;
-    line-height: 35px;
+    font-size: 2.66vw;
+    line-height: 55px;
 }
 
 .text-hp {
@@ -47,11 +49,11 @@
 }
 
 .co-header-css {
-    margin-left: 12%;
+    /*margin-left: 12%;*/
 }
 
 .first-text-hp {
-    margin-left: 15%;!important;
+    /*margin-left: 13%;!important;*/
     margin-bottom: 10%;
     /*letter-spacing: 0.045rem;*/
 }
@@ -62,7 +64,7 @@
     background-color: #EFD483;
     color: inherit;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 15px;
 }
 
 .double-border:hover {
