--- a/public/css/introduce/sec5.css
+++ b/public/css/introduce/sec5.css
@@ -19,11 +19,12 @@
 }
 
 .img-sec5-intro {
-    transform: translateX(7%);
+    padding-right: 4%;
+    padding-left: 2%;
 }
 
 .header1-sec5-intro {
-    font-size: 51px;
+    font-size: 2.66vw;
     color: #141C46;
     margin-bottom: -1%;
 }
