--- a/public/css/homepage/sec2.css
+++ b/public/css/homepage/sec2.css
@@ -16,35 +16,73 @@
 .row-test-1 {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    /*justify-content: center;*/
     /*align-items: center;*/
 }
 
 .img-sec2-hp-1 {
-    padding-left: 2%;
-    padding-right: 4%;
+    /*padding-left: 2%;*/
+    /*padding-right: 4%;*/
+}
+
+.left-test-1 {
+    width: 20vw;
+}
+
+.left-test {
+    width: 77vw;
+}
+
+.right-test-1 {
+    width: 77vw;
+    padding-right: 1%;
+    padding-top: 2%;
+}
+
+.right-test {
+    right: 30vw;
 }
 
 .img-sec2-hp-2 {
-    padding-right: 2%;
+    /*padding-right: 2%;*/
+    padding-left: 2%;
+}
+
+.header-first-line-hp-1 {
+    text-transform: uppercase;
+    color: white;
+    font-size: 1.09vw;
+    /*width: 20vw;*/
     padding-left: 4%;
 }
 
 .header-first-line-hp {
     text-transform: uppercase;
     color: white;
-    font-size: 21px;
+    font-size: 1.09vw;
+    width: 20vw;
+    padding-right: 12%;
+}
+
+.header-second-line-hp-1 {
+    color: #D8AB67;
+    font-size: 2.66vw;
+    line-height: 40px;
+    /*width: 20vw;*/
+    padding-left: 4%;
 }
 
 .header-second-line-hp {
     color: #D8AB67;
     font-size: 2.66vw;
-    line-height: 55px;
+    line-height: 40px;
+    width: 20vw;
+    padding-right: 12%;
 }
 
 .text-hp {
-    font-size: 15px;
-    text-align: justify;
+    font-size: 0.85vw;
+    /*text-align: justify;*/
     color: white;
 }
 
@@ -64,7 +102,7 @@
     background-color: #EFD483;
     color: inherit;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 0.8vw;
 }
 
 .double-border:hover {
@@ -77,13 +115,26 @@
     justify-content: right;
 }
 
+.text-content1-sec2-hp {
+    margin-top: 5%;
+    width: 14vw;
+    /*margin-left: 18%;*/
+    justify-content: right;
+    text-align: justify;
+}
+
 .text1-content2-sec2-hp {
-    margin-top: 10%;
+    margin-top: 5%;
+    width: 14vw;
+    margin-left: 18%;
+    justify-content: right;
+    text-align: justify;
 }
 
 .btn-content2-sec2-hp {
     margin-top: 10%;
     text-align: right;
+    padding-right: 12%;
 }
 
 .sec2-hp-mb {
