--- a/public/css/tien-do/sec2.css
+++ b/public/css/tien-do/sec2.css
@@ -11,7 +11,7 @@
 
 .header1-sec2-tien-do {
    letter-spacing: 0.35rem;
-    font-size: 25px;
+    font-size: 1.09vw;
 }
 
 .header2-sec2-tien-do {
