--- a/public/css/header.css
+++ b/public/css/header.css
@@ -47,7 +47,7 @@
 
 
 .headerpc {
-    height: 18vh;
+    height: 17vh;
     width: 100vw;
 }
 
@@ -58,7 +58,8 @@
     left: 0;
     width: 100%;
     height: 75%;
-    background-image: url("/images/header/川から見上Background Standee 1(DaikoHL_VIEW1_100419) (1) 3.png");
+    /*background-image: url("/images/header/川から見上Background Standee 1(DaikoHL_VIEW1_100419) (1) 3.png");*/
+    background-color: rgba(19, 51, 81, 0.8);
     /*background-size: 102vw auto;*/
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -99,7 +100,7 @@ ul li a {
 
 ul li a p {
    letter-spacing: 2px;
-    font-size: 14px;
+    font-size: 0.7vw;
 }
 
 ul li a:hover {
