--- a/public/css/introduce/sec2.css
+++ b/public/css/introduce/sec2.css
@@ -1,8 +1,8 @@
 .sec2-intro-pc {
     background-image: url("/images/introduce/sec2/Group 110.png");
-    background-size: 100% 105%;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-position: center -10px;
+    background-position: center -15px;
 }
 
 .container-sec2-intro-pc {
