--- a/public/css/introduce/sec4.css
+++ b/public/css/introduce/sec4.css
@@ -3,7 +3,7 @@
     justify-content: center;
     text-align: center;
     background-image: url("/images/introduce/sec4/Group 105 (1).png");
-    background-size: 100% 100%;
+    background-size: cover;
     padding-bottom: 115%;
     padding-top: 5%;
 }
