tung luon ben ban 2

--- a/public/css/homepage/sec7-v.css
+++ b/public/css/homepage/sec7-v.css
@@ -15,13 +15,13 @@
 }
 
 .header2-sec7-v-hp {
-    color: #D8AB67;
+    color: #EFD483;
     font-size: 50px;
 }
 .btn-sec7-v-hp {
     width: 15vw;
     height: 5vh;
-    background-color: #D8AB67;
+    background-color: #EFD483;
 }
 
 .sec7-v-hp-mb {
@@ -41,7 +41,7 @@
 }
 
 .header2-sec7-v-hp-mb {
-    color: #D8AB67;
+    color: #EFD483;
     font-size: 28px;
 }
 
