--- a/public/css/introduce/sec3.css
+++ b/public/css/introduce/sec3.css
@@ -3,7 +3,7 @@
     background-repeat: no-repeat;
     padding-bottom: 40%;
     background-position: center -10px;
-    background-size: cover;
+    background-size: 120% auto;
 }
 
 .text-sec3-intro-pc {
