--- a/public/css/location/sec2.css
+++ b/public/css/location/sec2.css
@@ -24,7 +24,7 @@
 
 .header2-sec2-location-pc {
     font-size: 2.66vw;
-    color: #D8AB67;
+    color: #EFD483;
 }
 
 .text-sec2-location-pc {
@@ -45,7 +45,7 @@
 
 .header2-sec2-location-mb {
     font-size: 25px;
-    color: #D8AB67;
+    color: #EFD483;
 }
 
 .text-sec2-location-mb {
