--- a/public/css/product-v/sec3.css
+++ b/public/css/product-v/sec3.css
@@ -25,7 +25,7 @@
 .header2-sec3-product-pc {
     text-transform: uppercase;
     font-size: 2.66vw;
-    color: #D8AB67;
+    color: #EFD483;
 }
 
 .text-sec3-product-pc {
@@ -52,6 +52,6 @@
 
 .header2-sec2-product-mb {
     font-size: 25px;
-    color: #D8AB67;
+    color: #EFD483;
     margin-top: -4%;
 }
