--- a/public/css/header.css
+++ b/public/css/header.css
@@ -47,8 +47,9 @@
 
 
 .headerpc {
-    height: 17vh;
+    /*height: 17vh;*/
     width: 100vw;
+    background-color: rgba(19, 51, 81, 0.8);
 }
 
 
@@ -148,7 +149,7 @@ ul.iconmb {
     flex-wrap: wrap;
     text-align: center;
     justify-content: right;
-    margin: 40px 0 0;
+    margin: 30px 0 0;
     /*transform: translateX(20%);*/
 }
 
@@ -179,7 +180,7 @@ ul.iconmb {
     flex-wrap: wrap;
     text-align: center;
     justify-content: left;
-    margin: 40px 0 0;
+    margin: 30px 0 0;
     padding: 0;
     /*transform: translateX(-10%);*/
 }
