--- a/public/css/product-v/sec2.css
+++ b/public/css/product-v/sec2.css
@@ -2,7 +2,7 @@
     background-image: url("/images/product/sec2/Group 103 (2).png");
     background-size: 100% 105%;
     background-repeat: no-repeat;
-    padding-top: 3%;
+    padding-top: 5.5%;
     background-position: center -10px;
 }
 
@@ -24,9 +24,10 @@
 .header-sec2-product-pc {
     text-transform: uppercase;
     font-size: 21px;
-    padding-top: 5%;
+    padding-top: 15%;
     color: #133351;
     letter-spacing: 0.35rem;
+    padding-left: 14%;
 }
 
 .container-sec2-product-pc {
