--- a/public/css/product-v/sec2.css
+++ b/public/css/product-v/sec2.css
@@ -27,7 +27,7 @@
     padding-top: 15%;
     color: #133351;
     letter-spacing: 0.35rem;
-    padding-left: 14%;
+    /*padding-left: 14%;*/
 }
 
 .container-sec2-product-pc {
