--- a/public/css/font.css
+++ b/public/css/font.css
@@ -43,6 +43,11 @@
 
 .space-21 {
     letter-spacing: 0.325rem;
+    font-size: 13px !important
+}
+
+.space-21-btn {
+    letter-spacing: 0.325rem;
     font-size: 12px !important
 }
 
