--- a/public/css/homepage/sec2.css
+++ b/public/css/homepage/sec2.css
@@ -110,6 +110,8 @@
     color: inherit;
     text-decoration: none;
     font-size: 0.8vw;
+    padding-top: 9px;
+    padding-bottom: 9px;
 }
 
 .double-border-blue {
@@ -119,6 +121,8 @@
     /*color: inherit;*/
     text-decoration: none;
     font-size: 0.8vw;
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
 
 .double-border:hover {
