--- a/public/css/introduce/sec3.css
+++ b/public/css/introduce/sec3.css
@@ -1,5 +1,5 @@
 .sec3-intro-pc {
-    background-image: url("/images/introduce/sec3/bg-4.png");
+    background-image: url("/images/introduce/sec3/3. Bản giao hòa.png");
     background-repeat: no-repeat;
     padding-bottom: 40%;
     background-position: center -10rem;
