sua theo y/c Tùng 09/12 0:43

--- a/public/css/introduce/sec2.css
+++ b/public/css/introduce/sec2.css
@@ -1,6 +1,6 @@
 .sec2-intro-pc {
     background-image: url("/images/introduce/sec2/Group 110.png");
-    background-size: 110% auto; /* Phóng to theo chiều ngang 10%, chiều cao tự động điều chỉnh */
+    background-size: 110% 105%; /* Phóng to theo chiều ngang 10%, chiều cao tự động điều chỉnh */
     background-repeat: no-repeat;
     background-position: center bottom; /* Dịch chuyển hình nền xuống phía dưới */
 }
