--- a/public/css/tien-do/sec2.css
+++ b/public/css/tien-do/sec2.css
@@ -12,7 +12,9 @@
 .header1-sec2-tien-do {
    letter-spacing: 0.35rem;
     font-size: 1.09vw;
+    color: #141c46;
 }
 
 .header2-sec2-tien-do {
+    color: #133351;
 }
