--- a/public/css/introduce/sec3.css
+++ b/public/css/introduce/sec3.css
@@ -2,8 +2,8 @@
     background-image: url("/images/introduce/sec3/3. Bản giao hòa.png");
     background-repeat: no-repeat;
     padding-bottom: 40%;
-    background-position: center -10rem;
-    background-size: 120% auto;
+    background-position: center;
+    background-size: 100% 105%;
 }
 
 .text-sec3-intro-pc {
