email and fix gui

--- a/public/css/font.css
+++ b/public/css/font.css
@@ -43,7 +43,7 @@
 
 .space-21 {
     letter-spacing: 0.325rem;
-    font-size: 13px !important
+    font-size: 1.09vw !important
 }
 
 .space-21-btn {
