--- a/public/css/homepage/sec3.css
+++ b/public/css/homepage/sec3.css
@@ -32,7 +32,7 @@
 
 .sec3-hp-mb {
     padding-top: 5%;
-    padding-bottom: 80%;
-    background-image: url("/images/homepage/sec3/Group 102.png");
-    background-size: cover;
+    padding-bottom: 55%;
+    background-image: url("/images/homepage/sec3/Group 84.jpg");
+    background-size: 100% 100%;
 }
