--- a/public/css/product-v/sec3.css
+++ b/public/css/product-v/sec3.css
@@ -15,7 +15,7 @@
 
 .content-sec3-product-pc {
     padding-left: 5%;
-    padding-top: 10%;
+    padding-top: 5%;
 }
 
 .header1-sec3-product-pc {
@@ -44,16 +44,22 @@
 }
 
 .img-sec3-product-pc {
-    padding-top: 11%;
+    padding-top: 22%;
 }
 
 .header1-sec2-product-mb {
-    font-size: 18px;
+    font-size: 13px;
     color:white;
 }
 
 .header2-sec2-product-mb {
-    font-size: 30px;
+    font-size: 29px;
     color: #EFD483;
     margin-top: -4%;
+}
+
+@media screen and (max-width: 1500px) {
+    .img-sec3-product-pc {
+        padding-top: 8%;
+    }
 }
