--- a/public/css/homepage/sec7-v.css
+++ b/public/css/homepage/sec7-v.css
@@ -4,7 +4,8 @@
     text-align: center;
     width: 100vw;
     height: 100vh;
-    background-image: url("/images/homepage/sec7-v/Group 98.png");
+    background-image: url("/images/homepage/sec7-v/Group 98 (1).png");
+    background-size: cover;
 }
 
 .header-sec7-v-hp {
