--- a/public/css/introduce/sec4.css
+++ b/public/css/introduce/sec4.css
@@ -24,7 +24,7 @@
 
 .header21-sec4-intro-pc {
     text-transform: uppercase;
-    font-size: 2.66vw;
+    font-size: 2.2vw;
     color: #43496B;
 }
 
@@ -70,6 +70,8 @@
     text-transform: uppercase;
     font-size: 27px;
     color: #43496B;
+    width: 90vw;
+    margin-left: 5%;
 }
 
 .header3-sec4-intro-mb {
